--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -31,7 +31,12 @@
 
 
   "sessionTitle": "Sitzung",
+  "sessionIMDDesc": "Diese Checkbox aktiviert oder deaktiviert den Fernzugriff auf die Endpunkte des Indoor Map Digitalizers (IMD). Da nur eine Person gleichzeitig bearbeiten kann, 'sperrt' der erste Benutzer den Editor. Die Schaltfläche 'IMD-Sperre aufheben' beendet die aktive Sitzung zwangsweise. <br><strong>Warnung:</strong> Das Aufheben der Sperre, während jemand aktiv arbeitet, unterbricht dessen Sitzung und führt wahrscheinlich zum Verlust von nicht gespeicherten Änderungen. Nur verwenden, um eine blockierte Sitzung freizugeben.",
   "enableIMDAPI": "Indoor Map Digitalizer-API aktivieren",
+  "toastIMDAPIEnabled": "IMD-API aktiviert",
+  "toastIMDAPIDisabled": "IMD-API deaktiviert",
+  "releaseIMDLock": "IMD-Sperre aufheben",
+
   "sessionDuration": "Sitzungsdauer",
   "sessionDurationDesc": "Legen Sie fest, wie lange ein Benutzer angemeldet bleibt, bevor eine erneute Anmeldung erforderlich ist. Änderungen gelten für alle neuen Anmeldungen; bereits aktive Sitzungen behalten ihre ursprüngliche Ablaufzeit bei.",
   "years": "Jahre",
@@ -39,8 +44,6 @@
   "hours": "Stunden",
   "minutes": "Minuten",
 
-  "toastIMDAPIEnabled": "IMD-API aktiviert",
-  "toastIMDAPIDisabled": "IMD-API deaktiviert",
   "toastDurationUpdated": "Sitzungsdauer aktualisiert",
   "toastInvalidDuration": "Ungültige Dauer eingegeben",
 
