--- a/src/renderer/locales/en.json
+++ b/src/renderer/locales/en.json
@@ -31,7 +31,6 @@
 
 
   "sessionTitle": "Session",
-  "sessionIMDDesc": "This checkbox enables or disables remote access to the Indoor Map Digitalizer (IMD) endpoints. Because only one person can edit at a time, the first user to connect 'locks' the editor. The 'Release IMD Lock' button forcibly ends the active session. <br><strong>Warning:</strong> Releasing the lock while someone is actively working will interrupt them and likely cause a loss of unsaved changes. Only use this to free a stuck session.",
   "enableIMDAPI": "Enable Indoor Map Digitalizer API",
   "toastIMDAPIEnabled": "Enabled IMD API",
   "toastIMDAPIDisabled": "Disabled IMD API",
@@ -39,7 +38,6 @@
   "toastIMDLockReleased": "Released IMD lock",
 
   "sessionDuration": "Session duration",
-  "sessionDurationDesc": "Set how long a user remains logged in before needing to sign in again. Changes will apply to all new logins; currently active sessions will keep their original expiry time.",
   "years": "Years",
   "days": "Days",
   "hours": "Hours",
@@ -145,5 +143,9 @@
   "ok": "OK",
   "cancel": "Cancel",
   "cancelled": "Cancelled",
-  "toastUnknownError": "An unknown error occurred"
+  "toastUnknownError": "An unknown error occurred",
+
+  "documentationUnavailableTitle": "Documentation not available",
+  "documentationUnavailableDesc": "In order to view the InStep documentation, the server needs to be enabled. Please enable the server and try again",
+  "documentationUnavailableNote": "Alternatively, you can view part of the documentation at https://github.com/DKrois/InStepServer/tree/master/sites/docs/content"
 }
