--- a/sites/docs/locales/de.json
+++ b/sites/docs/locales/de.json
@@ -7,5 +7,13 @@
     "overview": "Übersicht",
     "quickstart": "Schnellstart",
     "security": "Sicherheit"
+  },
+  "ui": {
+    "404": {
+      "title": "Seite nicht gefunden",
+      "heading": "404 Nicht gefunden",
+      "message": "Die angeforderte Dokumentationsseite konnte nicht gefunden werden.",
+      "button": "Zurück zur Einleitung"
+    }
   }
 }
