--- a/sites/docs/locales/en.json
+++ b/sites/docs/locales/en.json
@@ -7,5 +7,13 @@
     "overview": "Overview",
     "quickstart": "Quickstart",
     "security": "Security"
+  },
+  "ui": {
+    "404": {
+      "title": "Page Not Found",
+      "heading": "404 Not Found",
+      "message": "The requested documentation page could not be found.",
+      "button": "Return to Introduction"
+    }
   }
 }
