--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -71,6 +71,8 @@
   "showStatistics": "Statistiken anzeigen",
   "hideStatistics": "Statistiken ausblenden",
 
+  "sponsoredBy": "Gesponsored von",
+
 
   "logs": "Protokolle",
   "showLogs": "Protokolle anzeigen",
