--- a/src/renderer/locales/en.json
+++ b/src/renderer/locales/en.json
@@ -71,6 +71,8 @@
   "showStatistics": "Show Statistics",
   "hideStatistics": "Hide Statistics",
 
+  "sponsoredBy": "Sponsored by",
+
 
   "logs": "Logs",
   "showLogs": "Show Logs",
